config/kubernetes/dcd-website-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: dcd-website
  name: dcd-website
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: dcd-website
    spec:
      containers:
      - image: 'datacentricdesign/dcd-website:'
        name: dcd-website
        resources: {}
      restartPolicy: Always
status: {}
