config/kubernetes/hydra-migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: hydra-migrate
  name: hydra-migrate
spec:
  containers:
  - args:
    - migrate
    - sql
    - postgres://:@postgresd:5432/?sslmode=disable
    - --yes
    image: 'oryd/hydra:'
    name: hydra-migrate
    resources: {}
  restartPolicy: OnFailure
status: {}
