config/kubernetes/keto-migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: keto-migrate
  name: keto-migrate
spec:
  containers:
  - args:
    - migrate
    - sql
    - postgres://:@postgresd:5432/?sslmode=disable
    - --yes
    image: 'oryd/keto:'
    name: keto-migrate
    resources: {}
  restartPolicy: OnFailure
status: {}
