config/kubernetes/netdata-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: netdata
  name: netdata
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: netdata
    spec:
      containers:
      - image: netdata/netdata
        name: netdata
        ports:
        - containerPort: 19999
        resources: {}
        securityContext:
          capabilities:
            add:
            - SYS_PTRACE
        volumeMounts:
        - mountPath: /host/proc
          name: netdata-claim0
          readOnly: true
        - mountPath: /host/sys
          name: netdata-claim1
          readOnly: true
        - mountPath: /var/run/docker.sock
          name: netdata-claim2
          readOnly: true
      hostname: dwd.tudelft.nl
      restartPolicy: Always
      volumes:
      - name: netdata-claim0
        persistentVolumeClaim:
          claimName: netdata-claim0
          readOnly: true
      - name: netdata-claim1
        persistentVolumeClaim:
          claimName: netdata-claim1
          readOnly: true
      - name: netdata-claim2
        persistentVolumeClaim:
          claimName: netdata-claim2
          readOnly: true
status: {}
