config/kubernetes/test-hello.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: hello
  name: hello-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hello-main
  template:
    metadata:
      labels:
        run: hello-main
    spec:
      containers:
        - image: nginxdemos/hello
          name: hello
