config/kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-tutorial-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-tutorial-deployment
  template:
    metadata:
      labels:
        app: kubernetes-tutorial-deployment
    spec:
      containers:
        - name: kubernetes-tutorial-application
          image: auth0blog/kubernetes-tutorial
          ports:
            - containerPort: 3000
