config/kubernetes/ambassador-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambassador
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  - name: "443"
    port: 443
    targetPort: 8443
  selector:
    service: ambassador
