config/kubernetes/dcd-api-mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: dcd-api-mqtt
  name: dcd-api-mqtt
spec:
  ports:
  - name: "8883"
    port: 8883
    targetPort: 8883
  selector:
    io.kompose.service: dcd-api-mqtt
status:
  loadBalancer: {}
