config/kubernetes/netdata-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: netdata
  name: netdata
spec:
  ports:
  - name: "19999"
    port: 19999
    targetPort: 19999
  selector:
    io.kompose.service: netdata
status:
  loadBalancer: {}
