config/kubernetes/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-cluster-ip
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: kubernetes-tutorial-deployment
  type: ClusterIP
