config/kubernetes/test-ingerss.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-resource
spec:
  rules:
    - host: 131.180.125.156
      http:
        paths:
          - backend:
              serviceName: nginx-deploy
              servicePort: 80
