config/kubernetes/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-resource
spec:
  rules:
    - host: dwd.tudelft.nl
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-deploy
              servicePort: 80
