config/kubernetes/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ingress
spec:
  rules:
    - host: dwd.tudelft.nl
      http:
        paths:
          - path: /website
            backend:
              serviceName: website
              servicePort: 80
